Upgrade to latest primogenitor, update dependencies, etc